@@ -11,12 +11,21 @@ HOMEPAGE="http://www.enlightenment.org/"
 
 SLOT="0.17"
 IUSE="exchange pam alsa tracker pm-utils debug xinerama xscreensaver opengl bluetooth \
-	+battery +clock +comp +conf-borders +conf-colors +conf-desklock +conf-desk +conf-desks \
+	+battery +clock +comp +conf \
+	+conf-borders +conf-colors +conf-desklock +conf-desk +conf-desks \
 	+conf-dialogs +conf-display +conf-dpms +conf-engine +conf-fonts +conf-imc +conf-intl \
-	+conf-menus +conf-mime +conf-mouse +conf +conf-paths +conf-profiles +conf-scale +conf-shelves \
-	+conf-startup +conf-theme +conf-winlist connman +cpufreq +dropshadow +everything +fileman \
-	+ibar +ibox +illume2 +illume ofono +pager +start +syscon +systray \
+	+conf-menus +conf-mime +conf-mouse +conf-paths +conf-profiles +conf-scale +conf-shelves \
+	+conf-startup +conf-theme +conf-winlist \
+	connman +cpufreq +dropshadow +everything \
+	+everything-files +everything-apps +everything-calc +everything-aspell +everything-wallpaper +everything-settings +everything-windows \
+	+fileman +ibar +ibox +illume2 +illume ofono +pager +start +syscon +systray \
 	+temperature +winlist +wizard"
+EVRY_MODS=(everything-files everything-apps everything-calc everything-aspell everything-wallpaper everything-settings everything-windows)
+CONF_MODS=(conf-borders conf-colors conf-desklock conf-desk conf-desks \
+	conf-dialogs conf-display conf-dpms conf-engine conf-fonts conf-imc conf-intl \
+	conf-menus conf-mime conf-mouse conf-paths conf-profiles conf-scale conf-shelves \
+	conf-startup conf-theme conf-winlist)
+
 
 # TODO: pm-utils changes /etc/enlightenment/sysactions.conf
 # TODO: patch to not require -i-really-know-what-i-am-doing-and-accept-full-responsibility-for-it
@@ -34,8 +43,24 @@ RDEPEND="
 	 >=dev-libs/ecore-9999[X,evas,opengl?,xinerama?,xscreensaver?,inotify,xim]
 	 >=dev-libs/e_dbus-9999[hal,connman?]
 	 >=media-libs/edje-9999
-	 >=media-libs/evas-9999[X,opengl?,eet,jpeg,png,safety-checks]"
+	 >=media-libs/evas-9999[X,opengl?,eet,jpeg,png,safety-checks]
+	everything-aspell? ( app-text/aspell )
+	everything-calc? ( sys-devel/bc )
+"
 DEPEND="${RDEPEND}"
+
+pkg_setup() {
+	if ! use everything;then
+		for x in ${EVRY_MODS[@]};do
+			use $x && die "USE=${x} requires USE=everything"
+		done
+	fi
+	if ! use conf;then
+		for x in ${CONF_MODS[@]};do
+			use $x && die "USE=${x} requires USE=conf"
+		done
+	fi
+}
 
 src_configure() {
 	# NOTE: mixer is plugin-able, but just alsa is provided atm.
@@ -89,6 +114,13 @@ src_configure() {
 	  $(use_enable temperature)
 	  $(use_enable winlist)
 	  $(use_enable wizard)
+	  $(use_enable everything-files)
+	  $(use_enable everything-apps)
+	  $(use_enable everything-calc)
+	  $(use_enable everything-aspell)
+	  $(use_enable everything-wallpaper)
+	  $(use_enable everything-settings)
+	  $(use_enable everything-windows)
 
 	"
 	efl_src_configure
